--- a/datacollector-ui/src/main/webapp/app/home/graph/graph.tpl.html
+++ b/datacollector-ui/src/main/webapp/app/home/graph/graph.tpl.html
@@ -1,6 +1,10 @@
 <div class="panel panel-default graph-pane"
      ng-controller="GraphController">
 
+  <div class="alert alert-dismissible alert-warning alert-deprecated" role="alert" >
+    {{ 'home.graphPane.deprecated' | translate }}
+      </div>
+
   <div class="panel-body" droppable drop="stageDrop">
 
     <div ng-if="!sourceExists && pipelineConfig && !isPipelineReadOnly && !$storage.maximizeDetailPane && !$storage.dontShowHelpAlert"
