SDC-16937. Update UI icon to mark deprecated stages
Change-Id: I1242b8a5340480701af72d33711415d841b325f0
Reviewed-on: https://review.streamsets.net/c/datacollector/+/40894
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>
Reviewed-by: Sam Meyer <sam@streamsets.com>

--- a/datacollector-ui/src/main/webapp/app/home/stageLibrary/stageLibrary.tpl.html
+++ b/datacollector-ui/src/main/webapp/app/home/stageLibrary/stageLibrary.tpl.html
@@ -32,8 +32,8 @@
              ng-style="{'background-image': 'url({{icon}})'}">
 
             <img ng-if="stageLibrary.beta"
-                 title="{{'global.form.betaStageTooltip' | translate}}"
-                 class="beta-icon" src="/assets/beta.svg" />
+                 title="{{'global.form.deprecatedStageTooltip' | translate}}"
+                 class="beta-icon" src="/assets/deprecated.svg" />
 
             <span>{{stageLibrary.label}}</span>
 
